--- a/static/css/admin-style.css
+++ b/static/css/admin-style.css
@@ -1060,6 +1060,7 @@ margin-top: 30px;
             border: 1px solid #d2d2d3;
             border-radius: 5px;
             box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+            /* width: 400px; */
           }
           
           .chart-title {
