--- a/templates/stu-base.html
+++ b/templates/stu-base.html
@@ -23,10 +23,28 @@
     <meta property="og:image" content="{% static 'images/logo.png' %}" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
+    <header>
+        <div class="navbar">
+            <div class="logo">
+                <a href="{% url 'index' %}">
+                    <img src="{% static 'images/logo.png' %}" width="125px">
+                </a>
+            </div>
+            <nav>
+                <ul id="menuitem">
+                    <li><a href="{% url 'index' %}">HOME</a></li>
+                    <li><a href="{% url 'student-dashboard' %}">PROFILE</a></li>
+                    <li><a href="{% url 'all-subjects' %}">SUBJECTS</a></li>
+                    <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
+                    <li><a href="{% url 'contact-us' %}">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <!-- Messages -->
     {% if messages %}
         {% for msg in messages %}
@@ -41,6 +59,7 @@
     {% block content %}
     {% endblock content %}
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 <script>
     var menuitem = document.getElementById("menuitem")
     menuitem.style.maxHeight = "0px";
