--- a/templates/teacher-base.html
+++ b/templates/teacher-base.html
@@ -21,6 +21,7 @@
     <meta property="og:type" content="web-application" />
     <meta property="og:url" content="http://127.0.0.1:8000" />
     <meta property="og:image" content="{% static 'images/logo.png' %}" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 
 <body>
@@ -39,4 +40,17 @@
     {% endblock content %}
 </body>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+<script>
+    var menuitem = document.getElementById("menuitem")
+    menuitem.style.maxHeight = "0px";
+    function menutoggle() {
+        if (menuitem.style.maxHeight == "0px") {
+            menuitem.style.maxHeight = "200px";
+        }
+        else {
+            menuitem.style.maxHeight = "0px";
+        }
+    }
+</script>
 </html>
