--- a/templates/teacher/single-teacher.html
+++ b/templates/teacher/single-teacher.html
@@ -1,31 +1,16 @@
-{% extends '../teacher-base.html' %}
+{% extends '../stu-base.html' %}
 {% load static %}
 
 {% block content %}
 
     <div class="header">
         <div class="container">
-            <div class="navbar">
-                <div class="logo">
-                    <a href="{% url 'index' %}">
-                        <img src="{% static 'images/logo.png' %}" width="125px">
-                    </a>
-                </div>
-                <nav>
-                    <ul id="menuitem">
-                        <li><a href="{% url 'index' %}">HOME</a></li>
-                        <li><a href="{% url 'teacher-dashboard' %}">PROFILE</a></li>
-                        <li><a href="{% url 'all-subjects' %}">ELECTIVE</a></li>
-                        <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
-                    </ul>
-                </nav>
-            </div>
             <div class="smallcon singlepro">
                 <div class="row"> 
                     <div class="col-2" >
                         <img src="{{ teacher.profile_pic.url }}" height="400px" width="400px">
                     </div>
-                   
+
                     <div class="col-2">
                         <h1>{{ teacher.name | safe }}</h1>
                         <p><b>Department :</b> {{ teacher.department.name | safe }}</p>
