--- a/templates/subject/admin-all-subjects.html
+++ b/templates/subject/admin-all-subjects.html
@@ -12,7 +12,9 @@
                             <h1>{{sub.name}}</h1><br>
                             <div><img src="{{ sub.cover_img.url }}" style="width: 250px; height: 250px;"></div><br>
                             <h3>Taught by:{{sub.teacher.name}}</h3> <!--can be  a link to the faculty profile-->
-                            <h3>{{sub.department.name}}</h3>
+                            <h3>{{sub.department.name}}</h3><br><br>
+                            <a class="submitbtn" href="{% url 'all-subjects' %}" style="width: 100px;display: inline;text-decoration: none">Edit</a>
+                            <a class="submitbtn" href="{% url 'all-subjects' %}" style="width: 100px;display: inline;text-decoration: none">Delete</a>
                         </div>
                     </a>
                 </div>
