--- a/templates/subject/admin-all-subjects.html
+++ b/templates/subject/admin-all-subjects.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<main class="main-container">
+<main class="main-container1">
     <div class="subject_container">
         {% for sub in subjects %}
             <div class="smallcon">
