--- a/static/css/admin-style.css
+++ b/static/css/admin-style.css
@@ -60,6 +60,7 @@ p{
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
+    text-align: center;
 }
 .col-1{
     flex-basis: 35%;
@@ -117,7 +118,6 @@ p{
     box-shadow: 10px 0 20px 10px rgba(0, 0,0,0.1);
    background-color: rgb(255, 255, 255);
     cursor: pointer;
-    
 }
 .col4 img{
     width: 100%;
@@ -980,6 +980,13 @@ margin-top: 30px;
             grid-area: main;
             overflow-y: auto;
             padding: 20px 20px;
+          }
+
+          .main-container1{
+            grid-area: main;
+            overflow-y: auto;
+            padding: 20px 20px;
+            /* display: flex; */
           }
           
           .main-title {
