teacher dashboard updates

--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -65,6 +65,11 @@
             <center><a href="{% url 'enroll' 1 %}" class="btn">Select Electives</a></center>
         {% endif %}
         </div>
+    </div><br><br>
+    <h2 class="title">Change Elective Status</h2>
+    <div class="col3">
+        <h2>Maths  -->  Sci    ></h2>
+        <h2>abhinav  -->  sairaj    Aproved</h2>
     </div>
 </div>
 {% endblock content %}
