fixed teacher dashboard

--- a/templates/dashboard/teacher.html
+++ b/templates/dashboard/teacher.html
@@ -3,8 +3,8 @@
 
 {% block content %}
 
-    <div class="smallcon">
-        <div class="row" style="display: block;"> 
+    <div class="smallcon singlepro">
+        <div class="row"> 
             <div class="col-2" style="text-align: center;">
                 {% if teacher.profile_pic %}
                     <img src="{{teacher.profile_pic.url}}" width="400px" height="400px">
