--- a/static/css/student-style.css
+++ b/static/css/student-style.css
@@ -100,6 +100,7 @@ p{
     min-width: 250px;
     margin-bottom: 30px;
     cursor: pointer;
+    border-radius: 10px;
 }
 .col3 img{
     width: 100%;
@@ -119,6 +120,36 @@ p{
     box-shadow: 10px 0 20px 10px rgba(0, 0,0,0.1);
    background-color: rgb(255, 255, 255);
     cursor: pointer;
+    
+}
+.col6{
+    flex-basis: 25%;
+    /* padding: 10px; */
+    width: 300px;
+    margin-bottom: 10px;
+   border-radius: 10px;
+    /* box-shadow: 10px 0 20px 10px rgba(0, 0,0,0.1); */
+   /* background-color: rgb(255, 255, 255); */
+    cursor: pointer;
+    align-items: center;
+    
+}
+.col5{
+    display: flex;
+    flex-wrap: wrap;
+    /* flex-basis: 33%; */
+    padding: 10px;
+    width: 900px;
+    margin-bottom: 50px;
+    transition: transform 0.5s;
+   border-radius: 10px;
+    box-shadow: 10px 0 20px 10px rgba(0, 0,0,0.1);
+   background-color: rgba(255, 255, 255, 0.781);
+    cursor: pointer;
+    text-align: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    
     
 }
 .col4 img{
@@ -173,15 +204,15 @@ h4{
 }
 .feedback .col3{
     text-align:center ;
-    padding: 40px 20px;
+    padding: 20px 20px;
     box-shadow: 0 0 20px 0px rgba(0, 0,0,0.1);
    
    transition: transform 0.5s;
    background-color: #fff;
 }
 .feedback .col3 img{
-width: 100px;
-height: 100px;
+width: 200px;
+height: 200px;
 margin-top: 20px;
 /* border-radius: 50%; */
 
