--- a/templates/dashboard/teacher.html
+++ b/templates/dashboard/teacher.html
@@ -14,10 +14,10 @@
             </div>
             
             <div class="col-2">
-                <h1>{{ teacher.name | safe }}</h1>
-                <p><b>Department :</b> {{ teacher.department.name | safe }}</p>
-                <p><b>Experience :</b> {{ teacher.experience | safe }} years</p>
-                <p><b>Contact :</b> {{ teacher.phone | safe }}</p>
+                <h1>{{ teacher.name | safe }}</h1><br>
+                <p><b>Department :</b> {{ teacher.department.name | safe }}</p><br>
+                <p><b>Experience :</b> {{ teacher.experience | safe }} years</p><br>
+                <p><b>Contact :</b> {{ teacher.phone | safe }}</p><br>
                 <p><b>Email :</b> {{ teacher.email | safe }}</p> 
             </div>
         </div>
