contact us data table

--- a/templates/admin-base.html
+++ b/templates/admin-base.html
@@ -124,7 +124,7 @@
             </li>
   
             <!-- <br><br> -->
-  
+            <li class="sidebar-list-item"><a href="common/contact-us-data.html">Contact Us Data</a></li>
             <li class="sidebar-list-item"><a href="{% url 'logout' %}">Logout</a></li>
           </ul>
   
